Fix styling on nav bar to align logo and hero text

--- a/style.css
+++ b/style.css
@@ -4,29 +4,18 @@ body {
   justify-content: space-evenly;
 }
 
-.header {
+.nav-bar {
     display: flex;
     justify-content: space-between;
     background: #1F2937;
+    padding:16px 128px 24px 128px;
 }
 
 .text {
   font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
-/*
-#header-left {
-    display:flex;
-    justify-content: flex-start;
-}
-
-#header-right {
-    display:flex;
-    justify-content: flex-end;
-}
-*/
-
-#header-logo-text {
+#nav-bar-logo-text {
     font-size:24px;
     font-weight: 900;
     color:#F9FAF8;  
@@ -34,18 +23,18 @@ body {
 
 #hero-container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   background: #1F2937;
   height: 400px;
+  padding:16px 128px 24px 128px;
 }
 
 #hero-container-left {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     width: 400px;
-    margin: 16px;
     gap: 16px;
   }
 
